/*

IGNORE THIS!

(IT'S FOR THE PEER-RPC TRANSPORT LAYER)

*/

syntax = 'proto3';

message RPCWrapper {
  string peerId = 1;
  string methodName = 2;
  string serviceName = 3;

  // for matching up responses
  int32 requestId = 4;

  bytes payload = 6;
}


message PRPCStreamChunk {

  enum Type {
    DATA = 0;
    PING = 1;
    PONG = 2;
    CLOSE = 3;
  }
  Type type = 1;

  // "service/method"
  string meta = 2;

  // request id
  uint32 id = 3;

  // if this is the last message
  bool done = 4;

  // the content
  bytes payload = 5;
}